fdo#71428: Spelling of "turquise" in Impress Table Design

Thanks to Owen Genat for pointing the bug + location of the problem

Change-Id: I5f385f6cb5e9241f4fa65159df1f8bbefd2f383b
Reviewed-on: https://gerrit.libreoffice.org/6624
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>